--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,8 @@ dmypy.json
 /projects/python/pet_images
 AIPND-master
 /neural_networks/pytorch/checkpoint.pth
+/projects/final_project/102flowers
+/projects/final_project/102segmentations.tgz
+/projects/final_project/102flowers.tgz
+/projects/final_project/102segmentations
+Cat_Dog_data
